src/main/java/com/pdemuinck/transformers/antlr/DbmlParser.java
// Generated from DbmlParser.g4 by ANTLR 4.8

package com.pdemuinck.transformers.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DbmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TABLE=1, REF=2, ENUM=3, INDEXES=4, PROJECT=5, NOTE=6, AS=7, DEFAULT=8, 
		DELETE=9, UPDATE=10, PRIMARY_KEY=11, UNIQUE=12, NOT_NULL=13, PK=14, NAME=15, 
		LBRACE=16, RBRACE=17, LPAREN=18, RPAREN=19, LBRACKET=20, RBRACKET=21, 
		COLON=22, COMMA=23, SEMICOLON=24, DOT=25, ASSIGN=26, RELATION_OP=27, BACKTICK=28, 
		STRING_LITERAL=29, IDENTIFIER=30, NUMBER=31, WS=32, COMMENT=33, OPERATOR=34, 
		HEX_COLOR=35, MULTI_LINE_STRING=36;
	public static final int
		RULE_dbml = 0, RULE_project = 1, RULE_project_settings = 2, RULE_table = 3, 
		RULE_schema_table_name = 4, RULE_schema = 5, RULE_table_settings = 6, 
		RULE_table_setting_list = 7, RULE_table_setting = 8, RULE_column = 9, 
		RULE_type = 10, RULE_column_settings = 11, RULE_column_setting_list = 12, 
		RULE_column_setting = 13, RULE_table_index = 14, RULE_index_entry = 15, 
		RULE_composite_index = 16, RULE_index_columns = 17, RULE_single_column_index = 18, 
		RULE_index_settings = 19, RULE_inline_expression_list = 20, RULE_inline_expression = 21, 
		RULE_expression = 22, RULE_function_call = 23, RULE_index_setting_list = 24, 
		RULE_index_setting = 25, RULE_column_expression_list = 26, RULE_note = 27, 
		RULE_relation = 28, RULE_reference = 29, RULE_reference_long_form = 30, 
		RULE_reference_short_form = 31, RULE_relation_settings = 32, RULE_relation_setting_list = 33, 
		RULE_relation_setting = 34, RULE_enumeration = 35, RULE_enum_entry = 36, 
		RULE_column_list = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"dbml", "project", "project_settings", "table", "schema_table_name", 
			"schema", "table_settings", "table_setting_list", "table_setting", "column", 
			"type", "column_settings", "column_setting_list", "column_setting", "table_index", 
			"index_entry", "composite_index", "index_columns", "single_column_index", 
			"index_settings", "inline_expression_list", "inline_expression", "expression", 
			"function_call", "index_setting_list", "index_setting", "column_expression_list", 
			"note", "relation", "reference", "reference_long_form", "reference_short_form", 
			"relation_settings", "relation_setting_list", "relation_setting", "enumeration", 
			"enum_entry", "column_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Table'", null, "'Enum'", "'indexes'", "'Project'", null, "'as'", 
			"'default'", "'delete'", "'update'", "'primary key'", "'unique'", "'not null'", 
			"'pk'", "'name'", "'{'", "'}'", "'('", "')'", "'['", "']'", "':'", "','", 
			"';'", "'.'", "'='", null, "'`'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TABLE", "REF", "ENUM", "INDEXES", "PROJECT", "NOTE", "AS", "DEFAULT", 
			"DELETE", "UPDATE", "PRIMARY_KEY", "UNIQUE", "NOT_NULL", "PK", "NAME", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COLON", 
			"COMMA", "SEMICOLON", "DOT", "ASSIGN", "RELATION_OP", "BACKTICK", "STRING_LITERAL", 
			"IDENTIFIER", "NUMBER", "WS", "COMMENT", "OPERATOR", "HEX_COLOR", "MULTI_LINE_STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DbmlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DbmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DbmlContext extends ParserRuleContext {
		public List<ProjectContext> project() {
			return getRuleContexts(ProjectContext.class);
		}
		public ProjectContext project(int i) {
			return getRuleContext(ProjectContext.class,i);
		}
		public List<TableContext> table() {
			return getRuleContexts(TableContext.class);
		}
		public TableContext table(int i) {
			return getRuleContext(TableContext.class,i);
		}
		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}
		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class,i);
		}
		public List<EnumerationContext> enumeration() {
			return getRuleContexts(EnumerationContext.class);
		}
		public EnumerationContext enumeration(int i) {
			return getRuleContext(EnumerationContext.class,i);
		}
		public List<NoteContext> note() {
			return getRuleContexts(NoteContext.class);
		}
		public NoteContext note(int i) {
			return getRuleContext(NoteContext.class,i);
		}
		public DbmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dbml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterDbml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitDbml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitDbml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DbmlContext dbml() throws RecognitionException {
		DbmlContext _localctx = new DbmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dbml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TABLE) | (1L << REF) | (1L << ENUM) | (1L << PROJECT) | (1L << NOTE))) != 0)) {
				{
				setState(81);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROJECT:
					{
					setState(76);
					project();
					}
					break;
				case TABLE:
					{
					setState(77);
					table();
					}
					break;
				case REF:
					{
					setState(78);
					reference();
					}
					break;
				case ENUM:
					{
					setState(79);
					enumeration();
					}
					break;
				case NOTE:
					{
					setState(80);
					note();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProjectContext extends ParserRuleContext {
		public TerminalNode PROJECT() { return getToken(DbmlParser.PROJECT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DbmlParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(DbmlParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DbmlParser.RBRACE, 0); }
		public List<Project_settingsContext> project_settings() {
			return getRuleContexts(Project_settingsContext.class);
		}
		public Project_settingsContext project_settings(int i) {
			return getRuleContext(Project_settingsContext.class,i);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterProject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitProject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitProject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectContext project() throws RecognitionException {
		ProjectContext _localctx = new ProjectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_project);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(PROJECT);
			setState(87);
			match(IDENTIFIER);
			setState(88);
			match(LBRACE);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NOTE || _la==IDENTIFIER) {
				{
				{
				setState(89);
				project_settings();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Project_settingsContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DbmlParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(DbmlParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(DbmlParser.STRING_LITERAL, 0); }
		public TerminalNode NOTE() { return getToken(DbmlParser.NOTE, 0); }
		public Project_settingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project_settings; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterProject_settings(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitProject_settings(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitProject_settings(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Project_settingsContext project_settings() throws RecognitionException {
		Project_settingsContext _localctx = new Project_settingsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_project_settings);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(IDENTIFIER);
				setState(98);
				match(COLON);
				setState(99);
				match(STRING_LITERAL);
				}
				break;
			case NOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(NOTE);
				setState(101);
				match(COLON);
				setState(102);
				match(STRING_LITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public TerminalNode TABLE() { return getToken(DbmlParser.TABLE, 0); }
		public Schema_table_nameContext schema_table_name() {
			return getRuleContext(Schema_table_nameContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(DbmlParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DbmlParser.RBRACE, 0); }
		public TerminalNode AS() { return getToken(DbmlParser.AS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DbmlParser.IDENTIFIER, 0); }
		public Table_settingsContext table_settings() {
			return getRuleContext(Table_settingsContext.class,0);
		}
		public List<ColumnContext> column() {
			return getRuleContexts(ColumnContext.class);
		}
		public ColumnContext column(int i) {
			return getRuleContext(ColumnContext.class,i);
		}
		public List<Table_indexContext> table_index() {
			return getRuleContexts(Table_indexContext.class);
		}
		public Table_indexContext table_index(int i) {
			return getRuleContext(Table_indexContext.class,i);
		}
		public List<NoteContext> note() {
			return getRuleContexts(NoteContext.class);
		}
		public NoteContext note(int i) {
			return getRuleContext(NoteContext.class,i);
		}
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(TABLE);
			setState(106);
			schema_table_name();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(107);
				match(AS);
				setState(108);
				match(IDENTIFIER);
				}
			}

			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(111);
				table_settings();
				}
			}

			setState(114);
			match(LBRACE);
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(119);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(115);
					column();
					}
					break;
				case 2:
					{
					setState(116);
					table_index();
					}
					break;
				case 3:
					{
					setState(117);
					note();
					}
					break;
				case 4:
					{
					setState(118);
					relation();
					}
					break;
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INDEXES) | (1L << NOTE) | (1L << IDENTIFIER))) != 0) );
			setState(123);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Schema_table_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DbmlParser.IDENTIFIER, 0); }
		public SchemaContext schema() {
			return getRuleContext(SchemaContext.class,0);
		}
		public Schema_table_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema_table_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterSchema_table_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitSchema_table_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitSchema_table_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Schema_table_nameContext schema_table_name() throws RecognitionException {
		Schema_table_nameContext _localctx = new Schema_table_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_schema_table_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(125);
				schema();
				}
				break;
			}
			setState(128);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DbmlParser.IDENTIFIER, 0); }
		public TerminalNode DOT() { return getToken(DbmlParser.DOT, 0); }
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterSchema(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitSchema(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_schema);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(IDENTIFIER);
			setState(131);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_settingsContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(DbmlParser.LBRACKET, 0); }
		public Table_setting_listContext table_setting_list() {
			return getRuleContext(Table_setting_listContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(DbmlParser.RBRACKET, 0); }
		public Table_settingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_settings; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterTable_settings(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitTable_settings(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitTable_settings(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_settingsContext table_settings() throws RecognitionException {
		Table_settingsContext _localctx = new Table_settingsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_table_settings);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(LBRACKET);
			setState(134);
			table_setting_list();
			setState(135);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_setting_listContext extends ParserRuleContext {
		public List<Table_settingContext> table_setting() {
			return getRuleContexts(Table_settingContext.class);
		}
		public Table_settingContext table_setting(int i) {
			return getRuleContext(Table_settingContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DbmlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DbmlParser.COMMA, i);
		}
		public Table_setting_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_setting_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterTable_setting_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitTable_setting_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitTable_setting_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_setting_listContext table_setting_list() throws RecognitionException {
		Table_setting_listContext _localctx = new Table_setting_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_table_setting_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			table_setting();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(138);
				match(COMMA);
				setState(139);
				table_setting();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_settingContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(DbmlParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DbmlParser.IDENTIFIER, i);
		}
		public TerminalNode COLON() { return getToken(DbmlParser.COLON, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(DbmlParser.STRING_LITERAL, 0); }
		public TerminalNode HEX_COLOR() { return getToken(DbmlParser.HEX_COLOR, 0); }
		public Table_settingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_setting; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterTable_setting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitTable_setting(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitTable_setting(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_settingContext table_setting() throws RecognitionException {
		Table_settingContext _localctx = new Table_settingContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_table_setting);
		int _la;
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				match(IDENTIFIER);
				setState(146);
				match(COLON);
				setState(147);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_LITERAL) | (1L << IDENTIFIER) | (1L << HEX_COLOR))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DbmlParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Column_settingsContext column_settings() {
			return getRuleContext(Column_settingsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(DbmlParser.COMMA, 0); }
		public TerminalNode SEMICOLON() { return getToken(DbmlParser.SEMICOLON, 0); }
		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitColumn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitColumn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnContext column() throws RecognitionException {
		ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_column);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(IDENTIFIER);
			setState(152);
			type();
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(153);
				column_settings();
				}
			}

			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA || _la==SEMICOLON) {
				{
				setState(156);
				_la = _input.LA(1);
				if ( !(_la==COMMA || _la==SEMICOLON) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DbmlParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(DbmlParser.LPAREN, 0); }
		public TerminalNode NUMBER() { return getToken(DbmlParser.NUMBER, 0); }
		public TerminalNode RPAREN() { return getToken(DbmlParser.RPAREN, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DbmlParserListener ) ((DbmlParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DbmlParserVisitor ) return ((DbmlParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}
